# ariadne-next

./: Cargo.toml  README.MD
examples/: multifile.rs
src/: ansi.rs  lib.rs  main.rs  plaintext.rs  render.rs  smol.rs.txt  style.rs  tree.rs
src/backends/: ansi.rs  mod.rs  plaintext.rs  render.rs
src/backends/snapshots/: ariadne_next__backends__plaintext__layout.snap  ariadne_next__backends__render__rendering.snap
src/snapshots/: ariadne_next__main.snap  ariadne_next__main.snap.new  ariadne_next__plaintext__layout.snap  ariadne_next__plaintext__layout.snap.new
tests/: ansi.rs  plaintext.rs  rusty.rs  test.rs.txt
tests/snapshots/: plaintext__main.snap  rusty__ansi.snap  rusty__ansi.snap.new  rusty__plainext.snap  rusty__plaintext.snap
