[package]
name = "ariadne_next"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.10.1"
unicode-width = "0.1.11"
yansi = "0.5.1"

[dev-dependencies]
insta = "1.34.0"
strip-ansi-escapes = "0.2.0"
